Fixing the spacing

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -7,6 +7,7 @@
 }
 *{
     box-sizing: border-box;
+    margin: 0;
 }
 body{
     background: rgb(252,252,252);
